--- a/plotly_bokeh/slides.ipynb
+++ b/plotly_bokeh/slides.ipynb
@@ -10,13 +10,10 @@
    "source": [
     "**Interactive Data Visualization Using Python**\n",
     "\n",
-    "Berlin, October 2016, DSR 08\n",
+    "Berlin, January 2017, DSR 09\n",
     "\n",
     ">Jesús Martínez Blanco\n",
-    "><font color=\"red\">Data Scientist, LiveIntent Inc.</font>\n",
-    "\n",
-    "Based on the workshop by\n",
-    "[Sven Ballentin](https://github.com/spaceeskimo/interactive_dataviz/tree/master/workshop_interactive_viz)"
+    "><font color=\"red\">Data Scientist, LiveIntent Inc.</font>"
    ]
   },
   {
