DSR-10 update plotly code

--- a/plotly_bokeh/code.ipynb
+++ b/plotly_bokeh/code.ipynb
@@ -34,8 +34,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:02:31.977594",
-     "start_time": "2017-01-18T00:02:29.466596"
+     "end_time": "2017-04-24T23:34:33.561439",
+     "start_time": "2017-04-24T23:34:32.038352"
     },
     "collapsed": true
    },
@@ -49,8 +49,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:02:38.309122",
-     "start_time": "2017-01-18T00:02:38.264565"
+     "end_time": "2017-04-24T23:34:34.383611",
+     "start_time": "2017-04-24T23:34:34.335961"
     },
     "collapsed": false
    },
@@ -65,8 +65,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:05:24.418159",
-     "start_time": "2017-01-18T00:05:24.409385"
+     "end_time": "2017-04-24T23:34:36.115865",
+     "start_time": "2017-04-24T23:34:36.109427"
     },
     "collapsed": true
    },
@@ -94,8 +94,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:05:27.320386",
-     "start_time": "2017-01-18T00:05:27.316817"
+     "end_time": "2017-04-24T23:34:37.489932",
+     "start_time": "2017-04-24T23:34:37.486823"
     },
     "collapsed": false
    },
@@ -110,8 +110,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:05:31.311536",
-     "start_time": "2017-01-18T00:05:31.299890"
+     "end_time": "2017-04-24T23:34:38.751413",
+     "start_time": "2017-04-24T23:34:38.744003"
     },
     "collapsed": false
    },
@@ -244,8 +244,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:11:26.061691",
-     "start_time": "2017-01-18T00:11:26.027636"
+     "end_time": "2017-04-24T23:51:22.947872",
+     "start_time": "2017-04-24T23:51:22.916031"
     },
     "collapsed": true
    },
@@ -284,8 +284,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:11:26.682195",
-     "start_time": "2017-01-18T00:11:26.673230"
+     "end_time": "2017-04-24T23:51:23.704901",
+     "start_time": "2017-04-24T23:51:23.696271"
     },
     "collapsed": false
    },
@@ -306,8 +306,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:12:19.051968",
-     "start_time": "2017-01-18T00:12:19.032534"
+     "end_time": "2017-04-24T23:51:46.908797",
+     "start_time": "2017-04-24T23:51:46.894780"
     },
     "collapsed": true
    },
@@ -342,8 +342,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:12:20.692925",
-     "start_time": "2017-01-18T00:12:20.682823"
+     "end_time": "2017-04-24T23:51:49.316623",
+     "start_time": "2017-04-24T23:51:49.309776"
     },
     "collapsed": false
    },
@@ -364,8 +364,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:12:59.526228",
-     "start_time": "2017-01-18T00:12:59.508706"
+     "end_time": "2017-04-24T23:52:11.970781",
+     "start_time": "2017-04-24T23:52:11.956461"
     },
     "collapsed": true
    },
@@ -401,8 +401,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:13:00.631405",
-     "start_time": "2017-01-18T00:13:00.621719"
+     "end_time": "2017-04-24T23:52:14.107242",
+     "start_time": "2017-04-24T23:52:14.100087"
     },
     "collapsed": false
    },
@@ -427,8 +427,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:13:30.721604",
-     "start_time": "2017-01-18T00:13:30.716532"
+     "end_time": "2017-04-24T23:52:26.653766",
+     "start_time": "2017-04-24T23:52:26.648597"
     },
     "collapsed": true
    },
@@ -450,8 +450,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:13:31.597893",
-     "start_time": "2017-01-18T00:13:31.591415"
+     "end_time": "2017-04-24T23:52:30.577302",
+     "start_time": "2017-04-24T23:52:30.570494"
     },
     "collapsed": false
    },
@@ -594,8 +594,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:15:07.398108",
-     "start_time": "2017-01-18T00:15:07.347639"
+     "end_time": "2017-04-24T23:53:22.606306",
+     "start_time": "2017-04-24T23:53:22.589733"
     },
     "collapsed": true
    },
@@ -612,8 +612,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:15:41.199647",
-     "start_time": "2017-01-18T00:15:41.191681"
+     "end_time": "2017-04-24T23:53:24.319723",
+     "start_time": "2017-04-24T23:53:24.306086"
     },
     "collapsed": false
    },
@@ -628,8 +628,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:15:42.065427",
-     "start_time": "2017-01-18T00:15:42.048402"
+     "end_time": "2017-04-24T23:53:26.257821",
+     "start_time": "2017-04-24T23:53:26.239266"
     },
     "collapsed": false
    },
@@ -643,8 +643,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:16:27.907331",
-     "start_time": "2017-01-18T00:16:27.829656"
+     "end_time": "2017-04-24T23:53:30.129535",
+     "start_time": "2017-04-24T23:53:30.077037"
     },
     "collapsed": false
    },
@@ -710,8 +710,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:19:53.233138",
-     "start_time": "2017-01-18T00:19:53.230531"
+     "end_time": "2017-04-24T23:53:53.614338",
+     "start_time": "2017-04-24T23:53:53.611512"
     },
     "collapsed": true
    },
@@ -725,8 +725,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:19:58.674248",
-     "start_time": "2017-01-18T00:19:58.630988"
+     "end_time": "2017-04-24T23:53:54.756609",
+     "start_time": "2017-04-24T23:53:54.729572"
     },
     "collapsed": false
    },
@@ -741,8 +741,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:20:08.939984",
-     "start_time": "2017-01-18T00:20:08.913922"
+     "end_time": "2017-04-24T23:53:56.721440",
+     "start_time": "2017-04-24T23:53:56.675295"
     },
     "collapsed": false
    },
@@ -757,8 +757,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:20:11.769518",
-     "start_time": "2017-01-18T00:20:11.763984"
+     "end_time": "2017-04-24T23:53:59.669409",
+     "start_time": "2017-04-24T23:53:59.665752"
     },
     "collapsed": false
    },
@@ -773,8 +773,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:20:14.761462",
-     "start_time": "2017-01-18T00:20:14.754121"
+     "end_time": "2017-04-24T23:54:00.953880",
+     "start_time": "2017-04-24T23:54:00.945392"
     },
     "collapsed": false
    },
@@ -788,8 +788,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:20:20.435927",
-     "start_time": "2017-01-18T00:20:20.398688"
+     "end_time": "2017-04-24T23:54:04.573545",
+     "start_time": "2017-04-24T23:54:04.553744"
     },
     "collapsed": false
    },
@@ -826,22 +826,7 @@
     }
    },
    "source": [
-    "## Adding Custom Events - Custom Buttons"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Adding Custom Events - Custom Buttons\n",
-    "\n",
-    "1. Build a Plotly Figure\n",
-    "2. Embed it as an iframe in your HTML\n",
-    "3. Write some JS for Interactions using the Plotly [postMessage API](https://github.com/plotly/postMessage-API)"
+    "## Simple Buttons and Animations"
    ]
   },
   {
@@ -849,55 +834,32 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:23:53.006958",
-     "start_time": "2017-01-18T00:23:51.618954"
+     "end_time": "2017-04-25T00:25:06.476406",
+     "start_time": "2017-04-25T00:25:06.454471"
     },
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "from IPython.display import display, HTML\n",
     "\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/volcano.csv')\n",
+    "data = [{'x': [0, 1], 'y': [0, 1]}]\n",
     "\n",
-    "data = [go.Heatmap(z=df.values.tolist(), colorscale='Viridis')]\n",
+    "layout = go.Layout(xaxis={'range': [0, 5], 'autorange': False},\n",
+    "                   yaxis={'range': [0, 5], 'autorange': False},\n",
+    "                   title='Start Title',\n",
+    "                   updatemenus=[{'type': 'buttons', 'buttons': [{'label': 'Play',\n",
+    "                                                 'method': 'animate',\n",
+    "                                                 'args': [None]}]}])\n",
     "\n",
-    "fig = go.Figure(data=data)\n",
+    "frames = [{'data': [{'x': [1, 2], 'y': [1, 2]}]},\n",
+    "          {'data': [{'x': [1, 4], 'y': [1, 4]}]},\n",
+    "          {'data': [{'x': [3, 4], 'y': [3, 4]}],\n",
+    "           'layout': {'title': 'End Title'}}]\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout, frames=frames)\n",
     "\n",
     "py.offline.iplot(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-01-18T00:26:33.855211",
-     "start_time": "2017-01-18T00:26:33.850548"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<script>\n",
-    "    function changeType(type){\n",
-    "        var plot = document.getElementById('plot').contentWindow;\n",
-    "        plot.postMessage( {\n",
-    "        'task': 'restyle',\n",
-    "            'update': {'type': type},\n",
-    "        },\n",
-    "        'https://plot.ly');\n",
-    "    }\n",
-    "\n",
-    "</script>\n",
-    "<div class=\"row\" style=\"padding:20px\">\n",
-    "    <button onclick=\"changeType('contour')\">Contour</button>\n",
-    "    <button onclick=\"changeType('heatmap')\">Heatmap</button>\n",
-    "    <button onclick=\"changeType('surface')\">Surface</button>\n",
-    "</div>\n",
-    "\n",
-    "<iframe src=\"https://plot.ly/~dsr_plotly/24.embed\" height=500 width=\"100%\" id=\"plot\" seamless frameborder=0></iframe>"
    ]
   },
   {
@@ -912,8 +874,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:27:38.714210",
-     "start_time": "2017-01-18T00:27:38.642333"
+     "end_time": "2017-04-25T00:26:48.126378",
+     "start_time": "2017-04-25T00:26:48.088603"
     },
     "collapsed": false
    },
@@ -944,7 +906,8 @@
     "\n",
     "1. [Streaming Data](https://plot.ly/python/streaming-tutorial/)\n",
     "2. [Connecting Databases](https://plot.ly/python/#databases)\n",
-    "3. [Building Reports](https://plot.ly/python/html-reports/)\n"
+    "3. [Building Reports](https://plot.ly/python/html-reports/)\n",
+    "4. [Plotly Dashboards](https://plot.ly/dashboards/)\n"
    ]
   },
   {
@@ -2363,21 +2326,21 @@
   },
   "widgets": {
    "state": {
-    "0fd1cf8f848a42909ecf73b1fc008837": {
-     "views": []
-    },
-    "950734280de7499d8f06a4a946b50b9b": {
-     "views": []
-    },
-    "9a184c7aecae413d95f9192728f2f9cd": {
-     "views": []
-    },
-    "a81c8eede86948d29ef82dbbbcbedaf7": {
+    "22fed47115b84e00a4b7ec145f617f1c": {
      "views": [
       {
-       "cell_index": 50
+       "cell_index": 48
       }
      ]
+    },
+    "2c68593c081f4400b39f85b8ca8ee31c": {
+     "views": []
+    },
+    "b445d1df7f624ac9ba049819b20fd582": {
+     "views": []
+    },
+    "c58822ff3527401f951e1b45d155ec47": {
+     "views": []
     }
    },
    "version": "1.1.2"
