--- a/plotly_bokeh/code.ipynb
+++ b/plotly_bokeh/code.ipynb
@@ -937,8 +937,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:46:22.649866",
-     "start_time": "2017-01-18T00:46:22.131580"
+     "end_time": "2017-04-25T22:11:59.960025",
+     "start_time": "2017-04-25T22:11:59.119271"
     },
     "collapsed": true
    },
@@ -969,8 +969,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:46:36.263345",
-     "start_time": "2017-01-18T00:46:36.252579"
+     "end_time": "2017-04-25T22:13:13.496597",
+     "start_time": "2017-04-25T22:13:13.484470"
     },
     "collapsed": false
    },
@@ -999,8 +999,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:46:54.643193",
-     "start_time": "2017-01-18T00:46:54.210736"
+     "end_time": "2017-04-25T22:13:45.984162",
+     "start_time": "2017-04-25T22:13:45.528196"
     },
     "collapsed": false,
     "scrolled": false
@@ -1053,8 +1053,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:49:54.489041",
-     "start_time": "2017-01-18T00:49:54.428725"
+     "end_time": "2017-04-25T22:26:32.527708",
+     "start_time": "2017-04-25T22:26:32.422821"
     },
     "collapsed": false
    },
@@ -1088,8 +1088,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:51:54.519214",
-     "start_time": "2017-01-18T00:51:54.462683"
+     "end_time": "2017-04-25T22:27:02.385004",
+     "start_time": "2017-04-25T22:27:02.297995"
     },
     "collapsed": false
    },
@@ -1121,8 +1121,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:52:20.982014",
-     "start_time": "2017-01-18T00:52:20.915820"
+     "end_time": "2017-04-25T22:27:41.948206",
+     "start_time": "2017-04-25T22:27:41.807125"
     },
     "collapsed": false
    },
@@ -1233,8 +1233,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:55:51.882516",
-     "start_time": "2017-01-18T00:55:51.824915"
+     "end_time": "2017-04-25T22:32:15.272435",
+     "start_time": "2017-04-25T22:32:15.165562"
     },
     "collapsed": false
    },
@@ -1272,8 +1272,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:58:02.617125",
-     "start_time": "2017-01-18T00:58:02.561102"
+     "end_time": "2017-04-25T22:32:39.502831",
+     "start_time": "2017-04-25T22:32:39.387283"
     },
     "collapsed": false
    },
@@ -1307,8 +1307,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T00:59:22.284825",
-     "start_time": "2017-01-18T00:59:21.627822"
+     "end_time": "2017-04-25T22:34:13.882910",
+     "start_time": "2017-04-25T22:34:13.246569"
     },
     "collapsed": false
    },
@@ -1360,8 +1360,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:01:22.467458",
-     "start_time": "2017-01-18T01:01:22.326441"
+     "end_time": "2017-04-25T22:35:17.300987",
+     "start_time": "2017-04-25T22:35:17.038176"
     },
     "collapsed": false
    },
@@ -1414,8 +1414,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:02:44.589632",
-     "start_time": "2017-01-18T01:02:44.562279"
+     "end_time": "2017-04-25T22:36:05.929512",
+     "start_time": "2017-04-25T22:36:05.902838"
     },
     "collapsed": false
    },
@@ -1432,8 +1432,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:02:54.309835",
-     "start_time": "2017-01-18T01:02:53.993851"
+     "end_time": "2017-04-25T22:36:39.282612",
+     "start_time": "2017-04-25T22:36:38.999527"
     },
     "collapsed": false
    },
@@ -1468,8 +1468,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:05:08.745828",
-     "start_time": "2017-01-18T01:05:08.015420"
+     "end_time": "2017-04-25T22:38:42.079299",
+     "start_time": "2017-04-25T22:38:41.407267"
     },
     "collapsed": false
    },
@@ -1549,8 +1549,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:06:51.231013",
-     "start_time": "2017-01-18T01:06:50.087285"
+     "end_time": "2017-04-25T22:39:29.885769",
+     "start_time": "2017-04-25T22:39:28.826355"
     },
     "collapsed": false
    },
@@ -1589,8 +1589,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:07:10.107500",
-     "start_time": "2017-01-18T01:07:10.092052"
+     "end_time": "2017-04-25T22:39:47.408348",
+     "start_time": "2017-04-25T22:39:47.388321"
     },
     "collapsed": false
    },
@@ -1604,8 +1604,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:07:11.770079",
-     "start_time": "2017-01-18T01:07:11.035578"
+     "end_time": "2017-04-25T22:39:50.080557",
+     "start_time": "2017-04-25T22:39:49.377785"
     },
     "collapsed": false
    },
@@ -1859,8 +1859,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:15:53.270548",
-     "start_time": "2017-01-18T01:15:53.224743"
+     "end_time": "2017-04-25T23:03:11.537157",
+     "start_time": "2017-04-25T23:03:11.462047"
     },
     "collapsed": false
    },
@@ -1897,8 +1897,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:16:01.816393",
-     "start_time": "2017-01-18T01:16:01.694897"
+     "end_time": "2017-04-25T23:03:15.744450",
+     "start_time": "2017-04-25T23:03:15.499267"
     },
     "collapsed": false
    },
@@ -1921,8 +1921,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:16:08.010509",
-     "start_time": "2017-01-18T01:16:07.835806"
+     "end_time": "2017-04-25T23:03:25.081150",
+     "start_time": "2017-04-25T23:03:24.803685"
     },
     "collapsed": false
    },
@@ -1949,8 +1949,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:16:16.199315",
-     "start_time": "2017-01-18T01:16:16.038745"
+     "end_time": "2017-04-25T23:03:29.777972",
+     "start_time": "2017-04-25T23:03:29.474578"
     },
     "collapsed": false
    },
@@ -1990,8 +1990,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:18:07.890083",
-     "start_time": "2017-01-18T01:18:07.563845"
+     "end_time": "2017-04-25T23:04:40.250880",
+     "start_time": "2017-04-25T23:04:39.806063"
     },
     "collapsed": false
    },
@@ -2041,8 +2041,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:18:37.849277",
-     "start_time": "2017-01-18T01:18:37.641766"
+     "end_time": "2017-04-25T23:08:19.934457",
+     "start_time": "2017-04-25T23:08:19.591257"
     },
     "collapsed": false
    },
@@ -2077,6 +2077,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Interactions: Hover / tooltips"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Not yet fully operational functionality; does not work for all glyphs).\n",
+    "\n",
+    "It is possible to define a hover tooltip that will show information related to the data source. The way to refer to the information that is to appear in the toolip is with a `@` or a `$` symbol:\n",
+    "- Field names starting with `@` are interpreted as columns on the data source.\n",
+    "- Field names starting with `$` are special, known fields, e.g. `$x` will display the x-coordinate under the current mouse position. `$index` will display the index of the corresponding data point.\n",
+    "\n",
+    "Custom tooltips with arbitrary HTML code can also be defined (see [the docs](http://bokeh.pydata.org/en/latest/docs/user_guide/tools.html#custom-tooltip) for more details)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T23:27:04.804974",
+     "start_time": "2017-04-25T23:27:04.464431"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from bokeh.plotting import figure, show, ColumnDataSource\n",
+    "from bokeh.models import HoverTool\n",
+    "\n",
+    "source = ColumnDataSource(data=dict(x=[1, 2, 3, 4, 5],\n",
+    "                                    y=[2, 5, 8, 2, 7],\n",
+    "                                    desc=['A', 'b', 'C', 'd', 'E']))\n",
+    "\n",
+    "hover = HoverTool(tooltips=[(\"index\", \"$index\"),\n",
+    "                            (\"(x,y)\", \"($x, $y)\"),\n",
+    "                            (\"desc\", \"@desc\")])\n",
+    "\n",
+    "p = figure(plot_width=400,\n",
+    "           plot_height=400,\n",
+    "           tools=[hover],\n",
+    "           title=\"Mouse over the dots\")\n",
+    "\n",
+    "p.circle('x', 'y', size=20, source=source)\n",
+    "\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Interactions: *Widgets*"
    ]
   },
@@ -2091,7 +2144,7 @@
     "**Adding Widgets**\n",
     "\n",
     "1. What are widgets?  \n",
-    "    + Widgets are UI components based off JavaScript which can be used for user input.\n",
+    "    + Widgets are UI components based on JavaScript which can be used for user input.\n",
     "2. How can widgets be used?\n",
     "    + Use the CustomJS callback\n",
     "    + Use the bokeh-server and set up event handlers with .on_change\n",
@@ -2122,8 +2175,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:21:05.347056",
-     "start_time": "2017-01-18T01:21:05.209302"
+     "end_time": "2017-04-25T23:41:08.650291",
+     "start_time": "2017-04-25T23:41:08.364181"
     },
     "collapsed": false
    },
@@ -2153,8 +2206,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:21:27.448401",
-     "start_time": "2017-01-18T01:21:27.264499"
+     "end_time": "2017-04-25T23:42:39.271703",
+     "start_time": "2017-04-25T23:42:38.904944"
     },
     "collapsed": false
    },
@@ -2200,8 +2253,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:24:15.107778",
-     "start_time": "2017-01-18T01:24:14.914274"
+     "end_time": "2017-04-25T23:46:59.236868",
+     "start_time": "2017-04-25T23:46:58.878919"
     },
     "collapsed": false
    },
@@ -2246,8 +2299,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-18T01:28:41.709271",
-     "start_time": "2017-01-18T01:28:41.516173"
+     "end_time": "2017-04-25T23:46:28.386993",
+     "start_time": "2017-04-25T23:46:27.835659"
     },
     "collapsed": false
    },
