--- a/plotly_bokeh/slides.ipynb
+++ b/plotly_bokeh/slides.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "**Interactive Data Visualization Using Python**\n",
     "\n",
-    "Berlin, April 2017, DSR 10\n",
+    "Berlin, July 2017, DSR 11\n",
     "\n",
     ">Jesús Martínez Blanco\n",
     "><font color=\"red\">Data Scientist, LiveIntent Inc.</font>"
@@ -139,7 +139,7 @@
     }
    },
    "source": [
-    "<center><img src=\"figures/intvis2.jpg\" width=\"150%\"></center>"
+    "<center><img src=\"figures/intvis2.jpg\" width=\"100%\"></center>"
    ]
   },
   {
@@ -150,7 +150,7 @@
     }
    },
    "source": [
-    "<center><img src=\"figures/intvis3.jpg\" width='150%'></center>"
+    "<center><img src=\"figures/intvis3.jpg\" width='100%'></center>"
    ]
   },
   {
@@ -343,17 +343,19 @@
    "source": [
     "**Bokeh Interfaces**\n",
     "\n",
-    "1. **bokeh.charts** (<font color='red'>high level</font>)\n",
-    "    + quick creation of statistical charts\n",
-    "    + functions like `BoxPlot()` and `Histogram()`\n",
+    "1. **bokeh.models** (<font color='red'>low level</font>)\n",
+    "    + full control over how plots and widgets are put together and configured\n",
+    "    + everything has to be done by hand\n",
+    "    \n",
     "    \n",
     "2. **bokeh.plotting** (<font color='red'>mid level</font>)\n",
     "    + mid-level general purpose interface\n",
-    "    + visual glyphs + sensible default axes, grids, and tools\n",
-    "\n",
-    "3. **bokeh.models** (<font color='red'>low level</font>)\n",
-    "    + full control over how plots and widgets are put together and configured\n",
-    "    + everything has to be done by hand"
+    "    + visual glyphs + sensible default axes, grids, and tools    \n",
+    "    \n",
+    "    \n",
+    "3. **bokeh.charts** (<font color='red'>high level</font>): *Now in a separate library called **bkcharts***\n",
+    "    + quick creation of statistical charts\n",
+    "    + functions like `BoxPlot()` and `Histogram()`"
    ]
   },
   {
@@ -472,12 +474,9 @@
     "1. Plotly\n",
     "    + [Plotly References](https://plot.ly/python/reference/#area)\n",
     "2. Bokeh\n",
-    "    + [User Guide](http://bokeh.pydata.org/en/0.11.0/docs/user_guide.html)\n",
-    "    + [Bokeh Gallery](http://bokeh.pydata.org/en/0.11.0/docs/gallery.html)\n",
-    "    + [Guide to resources](https://bokeh.github.io/blog/2016/10/3/resources-overview/)\n",
-    "3. pandas-highcharts\n",
-    "    + A python library to create [Highcharts.js](http://www.highcharts.com/) graphics from pandas dataframes\n",
-    "    + [Found in PyPI](https://pypi.python.org/pypi/pandas-highcharts/)"
+    "    + [User Guide](http://bokeh.pydata.org/en/latest/docs/user_guide.html#userguide)\n",
+    "    + [Bokeh Gallery](http://bokeh.pydata.org/en/latest/docs/gallery.html)\n",
+    "    + [Guide to resources](https://bokeh.github.io/blog/2016/10/3/resources-overview/)"
    ]
   }
  ],
@@ -498,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.3"
   },
   "toc": {
    "toc_cell": false,
@@ -520,5 +519,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
