--- a/PLOTLY/code_for_slides.ipynb
+++ b/PLOTLY/code_for_slides.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "# and enable the offline mode in the notebook\n",
+    "# and enable the offline mode in the notebook (not needed in Jupyter Lab)\n",
     "py.offline.init_notebook_mode(connected=True)"
    ]
   },
@@ -287,6 +287,8 @@
    "outputs": [],
    "source": [
     "# A random dataframe as example\n",
+    "import pandas as pd\n",
+    "\n",
     "df = pd.DataFrame({'Column A':[2,5,3,4,1],\n",
     "                   'Column B':[6,2,4,1,8]})"
    ]
