--- a/PLOTLY/code_for_slides.ipynb
+++ b/PLOTLY/code_for_slides.ipynb
@@ -82,8 +82,8 @@
     "x = np.linspace(0, 2*np.pi)\n",
     "\n",
     "# Traces\n",
-    "trace0 = go.Scatter(x=x, y=np.sin(x))\n",
-    "trace1 = go.Scatter(x=x, y=np.cos(x))\n",
+    "trace0 = dict(type='scatter', x=x, y=np.sin(x))\n",
+    "trace1 = dict(type='scatter', x=x, y=np.cos(x))\n",
     "\n",
     "# Figure\n",
     "fig = go.Figure(data=[trace0, trace1]) "
@@ -105,13 +105,13 @@
     "x = np.linspace(0, 2*np.pi)\n",
     "\n",
     "# Traces\n",
-    "trace0 = go.Scatter(x=x, y=np.sin(x), name='sin(x)')\n",
-    "trace1 = go.Scatter(x=x, y=np.cos(x), name='cos(x)')\n",
+    "trace0 = dict(type='scatter', x=x, y=np.sin(x), name='sin(x)')\n",
+    "trace1 = dict(type='scatter', x=x, y=np.cos(x), name='cos(x)')\n",
     "\n",
     "# Layout\n",
-    "layout = go.Layout(title='SIN and COS functions',\n",
-    "                   xaxis=dict(title='x'),\n",
-    "                   yaxis=dict(title='f(x)'))\n",
+    "layout = dict(title='SIN and COS functions',\n",
+    "              xaxis=dict(title='x'),\n",
+    "              yaxis=dict(title='f(x)'))\n",
     "\n",
     "# Figure\n",
     "fig = go.Figure(data=[trace0, trace1], layout=layout) "
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "# Display the result within the notebook:\n",
-    "py.offline.iplot(fig) "
+    "py.offline.iplot(fig)"
    ]
   },
   {
@@ -251,9 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Cufflinks"
    ]
@@ -331,6 +329,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py.tools.set_credentials_file(username='jmb.jesus', api_key='DCHx4vjHslJDkbX7nWS2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-11-14T22:26:02.132465",
@@ -385,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.3"
   },
   "toc": {
    "toc_cell": false,
@@ -407,5 +414,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
