DSR-17 update: add matplotlib to Docker for Plotly

--- a/PLOTLY/code_for_slides.ipynb
+++ b/PLOTLY/code_for_slides.ipynb
@@ -332,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "py.tools.set_credentials_file(username='jmb.jesus', api_key='DCHx4vjHslJDkbX7nWS2')"
+    "py.tools.set_credentials_file(username='jmb.jesus', api_key=PLOTLY_API_KEY)"
    ]
   },
   {
@@ -392,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   },
   "toc": {
    "toc_cell": false,
