--- a/PLOTLY/notebooks/03 - Subplots.ipynb
+++ b/PLOTLY/notebooks/03 - Subplots.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotly Figure Building Blocks"
+    "# Subplots"
    ]
   },
   {
@@ -44,45 +44,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-11-12T12:12:07.576419",
-     "start_time": "2017-11-12T12:12:07.573724"
-    },
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Building blocks of Plotly plots\n",
-    "import plotly.graph_objs as go"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Constructing a figure\n",
-    "import numpy as np\n",
-    "x = np.linspace(0, 2*np.pi)\n",
+    "# Contrary to what we saw so far, the figure object with subplots is defined beforehand:\n",
+    "from plotly.tools import make_subplots\n",
     "\n",
-    "# Traces\n",
-    "trace0 = dict(\n",
-    "    type='scatter', \n",
-    "    x=x, \n",
-    "    y=np.sin(x)\n",
-    ")\n",
-    "trace1 = dict(\n",
-    "    type='scatter', \n",
-    "    x=x, \n",
-    "    y=np.cos(x)\n",
-    ")\n",
-    "\n",
-    "# Figure\n",
-    "fig = go.Figure(data=[trace0, trace1]) "
+    "fig = make_subplots(\n",
+    "    rows=1, \n",
+    "    cols=2, \n",
+    "    subplot_titles=('f(x) = sin(x)', 'f(x) = cos(x)'), \n",
+    "    shared_yaxes=True,\n",
+    ")"
    ]
   },
   {
@@ -91,87 +64,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the result within the notebook:\n",
-    "py.offline.iplot(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-11-13T22:24:57.042999",
-     "start_time": "2017-11-13T22:24:56.957339"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# and now with a Layout\n",
+    "# Then we use the method 'append_trace' to append each trace to the indicated subplot\n",
+    "import numpy as np\n",
     "x = np.linspace(0, 2*np.pi)\n",
+    "trace0 = dict(type='scatter', x=x, y=np.sin(x), name='sin(x)')\n",
+    "trace1 = dict(type='scatter', x=x, y=np.cos(x), name='cos(x)')\n",
     "\n",
-    "# Traces\n",
-    "trace0 = dict(\n",
-    "    type='scatter', \n",
-    "    x=x, \n",
-    "    y=np.sin(x), \n",
-    "    name='sin(x)'\n",
-    ")\n",
-    "trace1 = dict(\n",
-    "    type='scatter', \n",
-    "    x=x, \n",
-    "    y=np.cos(x), \n",
-    "    name='cos(x)'\n",
-    ")\n",
+    "fig.append_trace(trace0, 1, 1)\n",
+    "fig.append_trace(trace1, 1, 2)\n",
     "\n",
-    "# Layout\n",
-    "layout = dict(\n",
-    "    title='SIN and COS functions',\n",
-    "    xaxis=dict(title='x'),\n",
-    "    yaxis=dict(title='f(x)')\n",
-    ")\n",
-    "\n",
-    "# Figure\n",
-    "fig = go.Figure(data=[trace0, trace1], layout=layout) "
+    "# Alternatively you can use add_scatter (or whatever add_...) specifying the axes to which it should be attached\n",
+    "# fig.add_scatter(x=x, y=np.sin(x), name='sin(x)', xaxis='x1')\n",
+    "# fig.add_scatter(x=x, y=np.cos(x), name='cos(x)', xaxis='x2')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-11-13T22:24:57.789203",
-     "start_time": "2017-11-13T22:24:57.758932"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the result within the notebook:\n",
     "py.offline.iplot(fig)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-11-13T22:46:07.022226",
-     "start_time": "2017-11-13T22:46:07.009245"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove Plotly links for a cleaner layout\n",
-    "config = dict(\n",
-    "    modeBarButtonsToRemove=['sendDataToCloud'],\n",
-    "    displaylogo=False,\n",
+    "# The layout can be modified a posteriori,\n",
+    "\n",
+    "# either accessing each key individually with the dot notation:\n",
+    "fig.layout.xaxis1.title = 'x'\n",
+    "fig.layout.xaxis2.title = 'x'\n",
+    "fig.layout.yaxis1.title = 'f(x)'\n",
+    "fig.layout.title = 'Trigonometric functions'\n",
+    "fig.layout.showlegend = False\n",
+    "fig.layout.width = 900\n",
+    "fig.layout.height = 500\n",
+    "\n",
+    "# or updating all of them at once with the method 'update':\n",
+    "layout = dict(\n",
+    "    xaxis1=dict(title='x'),\n",
+    "    xaxis2=dict(title='x'),\n",
+    "    yaxis1=dict(title='f(x)'),\n",
+    "    title='Trigonometric functions',\n",
+    "    showlegend=False,\n",
+    "    width=900,\n",
+    "    height=500,\n",
     ")\n",
-    "        \n",
-    "py.offline.iplot(\n",
-    "    fig,\n",
-    "    show_link=False,\n",
-    "    config=config,\n",
-    ")"
+    "\n",
+    "fig.layout.update(layout);\n",
+    "\n",
+    "# Note that 'xaxis' and 'yaxis' have now suffixes starting from 1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py.offline.iplot(fig)"
    ]
   },
   {
@@ -185,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the example cluster data, loaded with:"
+    "Take the [Measles example](https://github.com/chumo/VIZ_course/blob/master/PLOTLY/Examples/Measles.ipynb) and reproduce the figures as much as possible using Plotly Express."
    ]
   },
   {
@@ -202,18 +157,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Build the following scatter plot\n",
+    "Build the following figure\n",
     "\n",
-    "![](images/fig_02.1.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And the following histogram:\n",
-    "\n",
-    "![](images/fig_02.2.png)"
+    "![](images/fig_03.1.png)"
    ]
   },
   {
