Update notebooks to Plotly 4

--- a/PLOTLY/notebooks/02 - Plotly Figure Building Blocks.ipynb
+++ b/PLOTLY/notebooks/02 - Plotly Figure Building Blocks.ipynb
@@ -15,7 +15,6 @@
      "end_time": "2017-11-12T12:11:54.642737",
      "start_time": "2017-11-12T12:11:53.056468"
     },
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -31,25 +30,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-12T12:12:00.250278",
-     "start_time": "2017-11-12T12:12:00.244853"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# and enable the offline mode in the notebook (not needed in Jupyter Lab)\n",
-    "py.offline.init_notebook_mode(connected=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2017-11-12T12:12:07.576419",
      "start_time": "2017-11-12T12:12:07.573724"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -60,9 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Constructing a figure\n",
@@ -92,7 +73,7 @@
    "outputs": [],
    "source": [
     "# Display the result within the notebook:\n",
-    "py.offline.iplot(fig)"
+    "fig.show()"
    ]
   },
   {
@@ -102,8 +83,7 @@
     "ExecuteTime": {
      "end_time": "2017-11-13T22:24:57.042999",
      "start_time": "2017-11-13T22:24:56.957339"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -147,7 +127,14 @@
    "outputs": [],
    "source": [
     "# Display the result within the notebook:\n",
-    "py.offline.iplot(fig)"
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can set a configuration to alter how the plot is displayed (see https://plot.ly/python/configuration-options/)"
    ]
   },
   {
@@ -161,17 +148,11 @@
    },
    "outputs": [],
    "source": [
-    "# Remove Plotly links for a cleaner layout\n",
-    "config = dict(\n",
-    "    modeBarButtonsToRemove=['sendDataToCloud'],\n",
+    "# For example, remove the Plotly logo for a cleaner layout, and make texts editable:\n",
+    "fig.show(config=dict(\n",
     "    displaylogo=False,\n",
-    ")\n",
-    "        \n",
-    "py.offline.iplot(\n",
-    "    fig,\n",
-    "    show_link=False,\n",
-    "    config=config,\n",
-    ")"
+    "    editable=True,\n",
+    "))"
    ]
   },
   {
@@ -240,9 +221,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
