--- a/PLOTLY/notebooks/03 - Subplots.ipynb
+++ b/PLOTLY/notebooks/03 - Subplots.ipynb
@@ -15,7 +15,6 @@
      "end_time": "2017-11-12T12:11:54.642737",
      "start_time": "2017-11-12T12:11:53.056468"
     },
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -29,26 +28,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-11-12T12:12:00.250278",
-     "start_time": "2017-11-12T12:12:00.244853"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# and enable the offline mode in the notebook (not needed in Jupyter Lab)\n",
-    "py.offline.init_notebook_mode(connected=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Contrary to what we saw so far, the figure object with subplots is defined beforehand:\n",
-    "from plotly.tools import make_subplots\n",
+    "from plotly.subplots import make_subplots\n",
     "\n",
     "fig = make_subplots(\n",
     "    rows=1, \n",
@@ -84,7 +68,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "py.offline.iplot(fig)"
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The layout can be modified a posteriori"
    ]
   },
   {
@@ -93,8 +84,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The layout can be modified a posteriori,\n",
-    "\n",
     "# either accessing each key individually with the dot notation:\n",
     "fig.layout.xaxis1.title = 'x'\n",
     "fig.layout.xaxis2.title = 'x'\n",
@@ -104,20 +93,7 @@
     "fig.layout.width = 900\n",
     "fig.layout.height = 500\n",
     "\n",
-    "# or updating all of them at once with the method 'update':\n",
-    "layout = dict(\n",
-    "    xaxis1=dict(title='x'),\n",
-    "    xaxis2=dict(title='x'),\n",
-    "    yaxis1=dict(title='f(x)'),\n",
-    "    title='Trigonometric functions',\n",
-    "    showlegend=False,\n",
-    "    width=900,\n",
-    "    height=500,\n",
-    ")\n",
-    "\n",
-    "fig.layout.update(layout);\n",
-    "\n",
-    "# Note that 'xaxis' and 'yaxis' have now suffixes starting from 1:"
+    "fig.show()"
    ]
   },
   {
@@ -126,7 +102,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "py.offline.iplot(fig)"
+    "# or updating all of them at once with the method 'update':\n",
+    "layout = dict(\n",
+    "    xaxis1=dict(title='x'), # Note that 'xaxis' and 'yaxis' have now suffixes starting from 1\n",
+    "    xaxis2=dict(title='x'),\n",
+    "    yaxis1=dict(title='f(x)'),\n",
+    "    title='Trigonometric functions',\n",
+    "    showlegend=False,\n",
+    "    width=900,\n",
+    "    height=500,\n",
+    ")\n",
+    "\n",
+    "fig.layout.update(layout)\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or with the update_XXX convenient methods, that can be concatenated:\n",
+    "fig.update_layout(\n",
+    "    title='Trigonometric functions',\n",
+    "    showlegend=False,\n",
+    "    width=900,\n",
+    "    height=500,\n",
+    ").update_xaxes(\n",
+    "    title='x',\n",
+    ").update_yaxes(\n",
+    "    title='f(x)',\n",
+    "    col=1,\n",
+    ")\n",
+    "\n",
+    "fig.show()"
    ]
   },
   {
@@ -186,9 +197,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
