--- a/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
+++ b/PLOTLY/notebooks/04 - Things you can do with a Figure.ipynb
@@ -15,7 +15,6 @@
      "end_time": "2017-11-12T12:11:54.642737",
      "start_time": "2017-11-12T12:11:53.056468"
     },
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -33,8 +32,7 @@
     "ExecuteTime": {
      "end_time": "2017-11-12T12:12:07.576419",
      "start_time": "2017-11-12T12:12:07.573724"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -45,24 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-11-12T12:12:00.250278",
-     "start_time": "2017-11-12T12:12:00.244853"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# and enable the offline mode in the notebook (not needed in Jupyter Lab)\n",
-    "py.offline.init_notebook_mode(connected=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Constructing a figure\n",
@@ -107,22 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "py.offline.iplot(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove Plotly links for a cleaner layout\n",
-    "config = dict(\n",
-    "    modeBarButtonsToRemove=['sendDataToCloud'],\n",
-    "    displaylogo=False,\n",
-    ")\n",
-    "        \n",
-    "py.offline.iplot(fig, show_link=False, config=config)"
+    "fig.show(config=dict(displaylogo=False))"
    ]
   },
   {
@@ -139,7 +105,11 @@
    "outputs": [],
    "source": [
     "# This includes by default all necessary code (including Plotly.js) to render the plot\n",
-    "py.offline.plot(fig, filename='sin_cos.html')"
+    "fig.write_html(\n",
+    "    file='sin_cos.html', \n",
+    "    include_plotlyjs='cdn',\n",
+    "    config=dict(displaylogo=False),\n",
+    ")"
    ]
   },
   {
@@ -155,12 +125,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "div_str = py.offline.plot(\n",
-    "    fig, \n",
-    "    output_type='div', \n",
-    "    include_plotlyjs=False, \n",
-    "    show_link=False,\n",
-    "    config=config,\n",
+    "fig.write_html(\n",
+    "    file='mydiv.html', \n",
+    "    include_plotlyjs=False,\n",
+    "    config=dict(displaylogo=False),\n",
+    "    full_html=False,\n",
     ")"
    ]
   },
@@ -171,6 +140,9 @@
    "outputs": [],
    "source": [
     "# Then you can use the resulting string in your own HTML code:\n",
+    "with open('mydiv.html', 'r') as f:\n",
+    "    div_str = f.read()\n",
+    "\n",
     "html_str = '''<!DOCTYPE html>\n",
     "                <html>\n",
     "                \n",
@@ -200,49 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Share it via the Plotly cloud (requires a free Plotly account)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A Plotly account is required (possible for free) and set credentials ([API key](https://plot.ly/settings/api)) as explained [here](https://plot.ly/python/getting-started/)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "PLOTLY_API_KEY = os.environ.get('PLOTLY_API_KEY')\n",
-    "py.tools.set_credentials_file(username='jmb.jesus', api_key=PLOTLY_API_KEY)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Where `PLOTLY_API_KEY` is an environment variable where I store the API key provided by Plotly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Then, this single command will send the plot to Plotly cloud\n",
-    "py.plotly.plot(fig, filename='sin_cos', sharing='public')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Export it as static image (requires a free Plotly account)"
+    "#### Export it as static image (requires ORCA installation: see [here](https://plot.ly/python/getting-started/#static-image-export-support))"
    ]
   },
   {
@@ -258,7 +188,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "py.plotly.image.save_as(fig, filename='sin_cos.png')"
+    "fig.write_image(file='sin_cos.png', width=700, height=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Share it via the Plotly cloud (Chart Studio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chart Studio is another pip installable Plotly library (`pip install chart_studio`) that allows you to generate plots and use the Plotly cloud platform to host and share them. This requires a Plotly (free) account. The hosting is also for free as long as you keep your plots public.\n",
+    "\n",
+    "See [Getting Started with Chart Studio in Python](https://plot.ly/python/getting-started-with-chart-studio/)."
    ]
   },
   {
@@ -299,9 +245,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
