DSR-20 added more exercises to express notebook

--- a/PLOTLY/notebooks/05 - Plotly Express.ipynb
+++ b/PLOTLY/notebooks/05 - Plotly Express.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise"
+    "## Exercise 1"
    ]
   },
   {
@@ -52,10 +52,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Build the following figure with animation:\n",
+    "Build this plot with two subplots:\n",
     "\n",
-    "![](images/fig_06.1.png)"
+    "![](images/fig_05.1.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now making each subplot as a frame of an animated plot:\n",
+    "\n",
+    "![](images/fig_05.2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the gapminder data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gapminder = px.data.gapminder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gapminder.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Build the following plots:\n",
+    "\n",
+    "![](images/fig_05.3.png)\n",
+    "\n",
+    "![](images/fig_05.4.png)\n",
+    "\n",
+    "and this animated plot:\n",
+    "\n",
+    "![](images/fig_05.5.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
