DSR-20: correct exercise text

--- a/PLOTLY/notebooks/03 - Subplots.ipynb
+++ b/PLOTLY/notebooks/03 - Subplots.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take the [Measles example](https://github.com/chumo/VIZ_course/blob/master/PLOTLY/Examples/Measles.ipynb) and reproduce the figures as much as possible using Plotly Express."
+    "Using the example cluster data, loaded with:"
    ]
   },
   {
